# 20_mini

./: .gitignore  README.md  app.py  customer_feedback_analysis.md  market_trends_monitoring.md  product_comparison.md  pyproject.toml  requirements.txt
db/: chroma.sqlite3
src/vidmarmini/: crew.py  main.py
src/vidmarmini/config/: agents.yaml  tasks.yaml
